--- a/config.yaml
+++ b/config.yaml
@@ -739,6 +739,126 @@ model_list:
   model_info:
     id: cerebras-glm4.7-15
     max_input_tokens: 131072
+- model_name: z-ai/glm4.7
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/glm-4p7
+    api_key: os.environ/FIREWORKS_KEY_1
+    rpm: 6000
+    tpm: 500000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-glm4.7-1
+    max_input_tokens: 32768
+- model_name: z-ai/glm4.7
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/glm-4p7
+    api_key: os.environ/FIREWORKS_KEY_2
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-glm4.7-2
+    max_input_tokens: 32768
+- model_name: z-ai/glm4.7
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/glm-4p7
+    api_key: os.environ/FIREWORKS_KEY_3
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-glm4.7-3
+    max_input_tokens: 32768
+- model_name: z-ai/glm4.7
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/glm-4p7
+    api_key: os.environ/FIREWORKS_KEY_4
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-glm4.7-4
+    max_input_tokens: 32768
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/minimax-m2
+    api_key: os.environ/FIREWORKS_KEY_1
+    rpm: 6000
+    tpm: 500000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-minimax-m2-1
+    max_input_tokens: 32768
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/minimax-m2
+    api_key: os.environ/FIREWORKS_KEY_2
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-minimax-m2-2
+    max_input_tokens: 32768
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/minimax-m2
+    api_key: os.environ/FIREWORKS_KEY_3
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-minimax-m2-3
+    max_input_tokens: 32768
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/minimax-m2
+    api_key: os.environ/FIREWORKS_KEY_4
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-minimax-m2-4
+    max_input_tokens: 32768
+- model_name: moonshotai/kimi-k2.5
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/kimi-k2p5
+    api_key: os.environ/FIREWORKS_KEY_1
+    rpm: 6000
+    tpm: 500000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-kimi-k2p5-1
+    max_input_tokens: 32768
+- model_name: moonshotai/kimi-k2.5
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/kimi-k2p5
+    api_key: os.environ/FIREWORKS_KEY_2
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-kimi-k2p5-2
+    max_input_tokens: 32768
+- model_name: moonshotai/kimi-k2.5
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/kimi-k2p5
+    api_key: os.environ/FIREWORKS_KEY_3
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-kimi-k2p5-3
+    max_input_tokens: 32768
+- model_name: moonshotai/kimi-k2.5
+  litellm_params:
+    model: fireworks_ai/accounts/fireworks/models/kimi-k2p5
+    api_key: os.environ/FIREWORKS_KEY_4
+    rpm: 10
+    tpm: 20000
+    max_tokens: 32768
+  model_info:
+    id: fireworks-kimi-k2p5-4
+    max_input_tokens: 32768
 litellm_settings:
   drop_params: true
   set_verbose: false
@@ -766,8 +886,12 @@ litellm_settings:
     - z-ai/glm4.7
     - gpt-5
     - gemini-3-flash
+    - fireworks_ai/accounts/fireworks/models/kimi-k2p5
   - z-ai/glm4.7:
     - z-ai/glm4.7-cerebras
+    - fireworks_ai/accounts/fireworks/models/glm-4p7
+  - minimaxai/minimax-m2:
+    - fireworks_ai/accounts/fireworks/models/minimax-m2
   context_window_fallbacks:
   - gpt-5:
     - gemini-2.5-flash-lite
