--- a/config.yaml
+++ b/config.yaml
@@ -178,19 +178,35 @@ model_list:
     id: zai-glm-4.5-flash
 - model_name: minimaxai/minimax-m2
   litellm_params:
-    model: openai/minimax-m2:free
-    api_base: https://api.routeway.ai/v1/
-    api_key: os.environ/ROUTEWAY_API_KEY
-    rpm: 20
+    model: fireworks_ai/accounts/fireworks/models/minimax-m2
+    api_key: os.environ/FIREWORKS_KEY_1
+    rpm: 6000
+    tpm: 500000
+    max_tokens: 32768
   model_info:
-    id: routeway-minimax-m2-free
+    id: fireworks-minimax-m2-1
+    max_input_tokens: 32768
 - model_name: minimaxai/minimax-m2
   litellm_params:
     model: nvidia_nim/minimaxai/minimax-m2
     api_key: os.environ/NIM_API_KEY
     rpm: 40
   model_info:
-    id: nim-minimax-m2
+    id: nim-minimax-m2-1
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: nvidia_nim/minimaxai/minimax-m2
+    api_key: os.environ/NIM1_KEY
+    rpm: 40
+  model_info:
+    id: nim-minimax-m2-2
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: nvidia_nim/minimaxai/minimax-m2
+    api_key: os.environ/NIM2_KEY
+    rpm: 40
+  model_info:
+    id: nim-minimax-m2-3
 - model_name: moonshotai/kimi-k2.5
   litellm_params:
     model: nvidia_nim/moonshotai/kimi-k2.5
@@ -226,13 +242,6 @@ model_list:
     rpm: 40
   model_info:
     id: nim-kimi-k2.5-2
-- model_name: deepseek-ai/deepseek-v3.2
-  litellm_params:
-    model: nvidia_nim/deepseek-ai/deepseek-v3.2
-    api_key: os.environ/NIM1_KEY
-    rpm: 40
-  model_info:
-    id: nim-deepseek-3.2-3
 - model_name: deepseek-ai/deepseek-v3.2
   litellm_params:
     model: nvidia_nim/deepseek-ai/deepseek-v3.2
