--- a/config.yaml
+++ b/config.yaml
@@ -178,16 +178,6 @@ model_list:
     id: zai-glm-4.5-flash
 - model_name: minimaxai/minimax-m2
   litellm_params:
-    model: fireworks_ai/accounts/fireworks/models/minimax-m2
-    api_key: os.environ/FIREWORKS_KEY_1
-    rpm: 6000
-    tpm: 500000
-    max_tokens: 32768
-  model_info:
-    id: fireworks-minimax-m2-1
-    max_input_tokens: 32768
-- model_name: minimaxai/minimax-m2
-  litellm_params:
     model: nvidia_nim/minimaxai/minimax-m2
     api_key: os.environ/NIM_API_KEY
     rpm: 40
@@ -207,6 +197,13 @@ model_list:
     rpm: 40
   model_info:
     id: nim-minimax-m2-3
+- model_name: minimaxai/minimax-m2
+  litellm_params:
+    model: nvidia_nim/minimaxai/minimax-m2
+    api_key: os.environ/NIM3_KEY
+    rpm: 40
+  model_info:
+    id: nim-minimax-m2-4
 - model_name: moonshotai/kimi-k2.5
   litellm_params:
     model: nvidia_nim/moonshotai/kimi-k2.5
@@ -242,6 +239,13 @@ model_list:
     rpm: 40
   model_info:
     id: nim-kimi-k2.5-2
+- model_name: moonshotai/kimi-k2.5
+  litellm_params:
+    model: nvidia_nim/moonshotai/kimi-k2.5
+    api_key: os.environ/NIM3_KEY
+    rpm: 40
+  model_info:
+    id: nim-kimi-k2.5-3
 - model_name: deepseek-ai/deepseek-v3.2
   litellm_params:
     model: nvidia_nim/deepseek-ai/deepseek-v3.2
@@ -249,6 +253,13 @@ model_list:
     rpm: 40
   model_info:
     id: nim-deepseek-3.2-4
+- model_name: deepseek-ai/deepseek-v3.2
+  litellm_params:
+    model: nvidia_nim/deepseek-ai/deepseek-v3.2
+    api_key: os.environ/NIM3_KEY
+    rpm: 40
+  model_info:
+    id: nim-deepseek-3.2-5
 - model_name: z-ai/glm4.7
   litellm_params:
     model: nvidia_nim/z-ai/glm4.7
@@ -270,6 +281,13 @@ model_list:
     rpm: 40
   model_info:
     id: nim-zai-glm4.7-3
+- model_name: z-ai/glm4.7
+  litellm_params:
+    model: nvidia_nim/z-ai/glm4.7
+    api_key: os.environ/NIM3_KEY
+    rpm: 40
+  model_info:
+    id: nim-zai-glm4.7-4
 - model_name: gemini-2.5-flash-lite
   litellm_params:
     model: vercel_ai_gateway/google/gemini-2.5-flash-lite
