--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,14 @@ model_list:
     rpm: 60
   model_info:
     id: llm7-openai-gpt-5-mini
+- model_name: gpt-5.2
+  litellm_params:
+    model: openai/gpt-5.2
+    api_base: https://api.llm7.io/v1
+    api_key: os.environ/LLM7_API_KEY
+    rpm: 60
+  model_info:
+    id: llm7-openai-gpt-5.2
 - model_name: gpt-o4-mini
   litellm_params:
     model: openai/gpt-o4-mini-2025-04-16
