Add direct Moonshot Kimi K2.5 provider

--- a/config.yaml
+++ b/config.yaml
@@ -894,6 +894,13 @@ model_list:
   model_info:
     id: fireworks-kimi-k2p5-4
     max_input_tokens: 32768
+- model_name: kimi-k2.5
+  litellm_params:
+    model: moonshotai/kimi-k2.5
+    api_key: os.environ/KIMI_API_KEY
+    rpm: 60
+  model_info:
+    id: moonshot-kimi-k2.5-direct
 litellm_settings:
   drop_params: true
   set_verbose: false
